Added carticon, dropdown and implemented cart reducer

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,10 +1,9 @@
 .custom-button {
     // min-width: 160px;
     width: auto;
-    height: 50px;
+    min-height: 50px;
     letter-spacing: 0.5px;
-    line-height: 50px;
-    padding: 0 35px 0 35px;
+    padding: 10px 35px;
     font-size: 15px;
     background-color: black;
     color: white;
@@ -12,6 +11,7 @@
     font-family: 'Open Sans Condensed';
     font-weight: bolder;
     border: none;
+    word-wrap: break-word;
     cursor: pointer;
   
     &:hover {
