--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,4 +1,4 @@
-.custom-button {
+   .custom-button {
     // min-width: 160px;
     width: auto;
     min-height: 50px;
@@ -19,14 +19,27 @@
       color: black;
       border: 1px solid black;
     }
-
+  
     &.google-sign-in {
       background-color: #4285f4;
       color: white;
-
+  
       &:hover {
         background-color: #357ae8;
         border: none;
       }
     }
+  
+    &.inverted {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+  
+      &:hover {
+        background-color: black;
+        color: white;
+        border: none;
+      }
+    }
   }
+  
