--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 22%;
+  width: 22vw;
   display: flex;
   flex-direction: column;
   height: 350px;
@@ -42,6 +42,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 18px;
+    padding-right: 10px;
 
     .name {
       width: 90%;
